RESOLVED FIXED67018
WebSocket: Fix indentation of WebSocket header files
https://bugs.webkit.org/show_bug.cgi?id=67018
Summary WebSocket: Fix indentation of WebSocket header files
Yuta Kitamura
Reported 2011-08-25 22:36:30 PDT
Let's make style checker happy.
Attachments
Patch (26.95 KB, patch)
2011-08-25 22:42 PDT, Yuta Kitamura
no flags
Yuta Kitamura
Comment 1 2011-08-25 22:42:07 PDT
Kent Tamura
Comment 2 2011-08-25 22:45:31 PDT
Comment on attachment 105315 [details] Patch ok
WebKit Review Bot
Comment 3 2011-08-25 23:48:48 PDT
Comment on attachment 105315 [details] Patch Clearing flags on attachment: 105315 Committed r93856: <http://trac.webkit.org/changeset/93856>
WebKit Review Bot
Comment 4 2011-08-25 23:48:52 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.