WebSocket: Fix indentation of WebSocket header files https://bugs.webkit.org/show_bug.cgi?id=67018

Reviewed by Kent Tamura.

No new tests. Style fix only.

* websockets/WebSocket.h:
(WebCore::WebSocket::create):
(WebCore::WebSocket::toWebSocket):
(WebCore::WebSocket::refEventTarget):
(WebCore::WebSocket::derefEventTarget):
* websockets/WebSocketChannel.h:
Removed formal parameter name of resumeTimerFired().
(WebCore::WebSocketChannel::create):
(WebCore::WebSocketChannel::refThreadableWebSocketChannel):
(WebCore::WebSocketChannel::derefThreadableWebSocketChannel):
(WebCore::WebSocketChannel::isNonControlOpCode):
(WebCore::WebSocketChannel::isControlOpCode):
(WebCore::WebSocketChannel::isReservedOpCode):
* websockets/WebSocketHandshake.h:
Removed formal parameter name of setClientProtocol().


Canonical link: https://commits.webkit.org/82801@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93856 268f45cc-cd09-0410-ab3c-d52691b4dbfc