Source/WebCore/websockets/WebSocketHandshake.h
@@ -40,83 +40,83 @@
 
 namespace WebCore {
 
-    class ScriptExecutionContext;
+class ScriptExecutionContext;
 
-    class WebSocketHandshake {
-        WTF_MAKE_NONCOPYABLE(WebSocketHandshake);
-    public:
-        enum Mode {
-            Incomplete, Normal, Failed, Connected
-        };
-        WebSocketHandshake(const KURL&, const String& protocol, ScriptExecutionContext*, bool useHixie76Protocol);
-        ~WebSocketHandshake();
-
-        const KURL& url() const;
-        void setURL(const KURL&);
-        const String host() const;
-
-        const String& clientProtocol() const;
-        void setClientProtocol(const String& protocol);
-
-        bool secure() const;
-
-        String clientOrigin() const;
-        String clientLocation() const;
-
-        CString clientHandshakeMessage() const;
-        WebSocketHandshakeRequest clientHandshakeRequest() const;
-
-        void reset();
-        void clearScriptExecutionContext();
-
-        int readServerHandshake(const char* header, size_t len);
-        Mode mode() const;
-        String failureReason() const; // Returns a string indicating the reason of failure if mode() == Failed.
-
-        String serverWebSocketOrigin() const; // Only for hixie-76 handshake.
-        String serverWebSocketLocation() const; // Only for hixie-76 handshake.
-        String serverWebSocketProtocol() const;
-        String serverSetCookie() const;
-        String serverSetCookie2() const;
-        String serverUpgrade() const;
-        String serverConnection() const;
-        String serverWebSocketAccept() const; // Only for hybi-10 handshake.
-        String serverWebSocketExtensions() const; // Only for hybi-10 handshake.
-
-        const WebSocketHandshakeResponse& serverHandshakeResponse() const;
-
-    private:
-        KURL httpURLForAuthenticationAndCookies() const;
-
-        int readStatusLine(const char* header, size_t headerLength, int& statusCode, String& statusText);
-
-        // Reads all headers except for the two predefined ones.
-        const char* readHTTPHeaders(const char* start, const char* end);
-        void processHeaders();
-        bool checkResponseHeaders();
-
-        KURL m_url;
-        String m_clientProtocol;
-        bool m_secure;
-        ScriptExecutionContext* m_context;
-        bool m_useHixie76Protocol;
-
-        Mode m_mode;
-
-        WebSocketHandshakeResponse m_response;
-
-        String m_failureReason;
-
-        // For hixie-76 handshake.
-        String m_hixie76SecWebSocketKey1;
-        String m_hixie76SecWebSocketKey2;
-        unsigned char m_hixie76Key3[8];
-        unsigned char m_hixie76ExpectedChallengeResponse[16];
-
-        // For hybi-10 handshake.
-        String m_secWebSocketKey;
-        String m_expectedAccept;
+class WebSocketHandshake {
+    WTF_MAKE_NONCOPYABLE(WebSocketHandshake);
+public:
+    enum Mode {
+        Incomplete, Normal, Failed, Connected
     };
+    WebSocketHandshake(const KURL&, const String& protocol, ScriptExecutionContext*, bool useHixie76Protocol);
+    ~WebSocketHandshake();
+
+    const KURL& url() const;
+    void setURL(const KURL&);
+    const String host() const;
+
+    const String& clientProtocol() const;
+    void setClientProtocol(const String&);
+
+    bool secure() const;
+
+    String clientOrigin() const;
+    String clientLocation() const;
+
+    CString clientHandshakeMessage() const;
+    WebSocketHandshakeRequest clientHandshakeRequest() const;
+
+    void reset();
+    void clearScriptExecutionContext();
+
+    int readServerHandshake(const char* header, size_t len);
+    Mode mode() const;
+    String failureReason() const; // Returns a string indicating the reason of failure if mode() == Failed.
+
+    String serverWebSocketOrigin() const; // Only for hixie-76 handshake.
+    String serverWebSocketLocation() const; // Only for hixie-76 handshake.
+    String serverWebSocketProtocol() const;
+    String serverSetCookie() const;
+    String serverSetCookie2() const;
+    String serverUpgrade() const;
+    String serverConnection() const;
+    String serverWebSocketAccept() const; // Only for hybi-10 handshake.
+    String serverWebSocketExtensions() const; // Only for hybi-10 handshake.
+
+    const WebSocketHandshakeResponse& serverHandshakeResponse() const;
+
+private:
+    KURL httpURLForAuthenticationAndCookies() const;
+
+    int readStatusLine(const char* header, size_t headerLength, int& statusCode, String& statusText);
+
+    // Reads all headers except for the two predefined ones.
+    const char* readHTTPHeaders(const char* start, const char* end);
+    void processHeaders();
+    bool checkResponseHeaders();
+
+    KURL m_url;
+    String m_clientProtocol;
+    bool m_secure;
+    ScriptExecutionContext* m_context;
+    bool m_useHixie76Protocol;
+
+    Mode m_mode;
+
+    WebSocketHandshakeResponse m_response;
+
+    String m_failureReason;
+
+    // For hixie-76 handshake.
+    String m_hixie76SecWebSocketKey1;
+    String m_hixie76SecWebSocketKey2;
+    unsigned char m_hixie76Key3[8];
+    unsigned char m_hixie76ExpectedChallengeResponse[16];
+
+    // For hybi-10 handshake.
+    String m_secWebSocketKey;
+    String m_expectedAccept;
+};
 
 } // namespace WebCore
 
